--- a/TransitPort/src/app/administrativo/administrativo.component.html
+++ b/TransitPort/src/app/administrativo/administrativo.component.html
@@ -1,1 +1,13 @@
-<p>administrativo works!</p>
+<div>
+    <table>
+        <tr>
+            <td><a routerLink="crear-orden">Crear Orden</a></td>
+            <td><a routerLink="crear-turno">Crear Turno</a></td>
+            <td><a routerLink="monitorizar-orden">Monitorizar Orden</a></td>
+            <td><a routerLink="buscar-contenedor">Buscar Contenedor</a></td>
+            <td><a routerLink="realizar-auditoria">Realizar Auditoria</a></td>
+            <td><a routerLink="incidencias">Incidencias</a></td>
+        </tr>
+    </table>
+</div>
+<router-outlet />
