--- a/TransitPort/src/app/log-in/log-in.component.html
+++ b/TransitPort/src/app/log-in/log-in.component.html
@@ -1,1 +1,11 @@
-<p><span class="transit">Transit</span><span class="guion">-</span><span class="port">Port</span></p>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <p><span class="transit">Transit</span><span class="guion">-</span><span class="port">Port</span></p>
+    </body>
+</html>
