--- a/TransitPort/src/app/log-in/log-in.component.html
+++ b/TransitPort/src/app/log-in/log-in.component.html
@@ -6,6 +6,27 @@
         <title>Document</title>
     </head>
     <body>
-        <p><span class="transit">Transit</span><span class="guion">-</span><span class="port">Port</span></p>
+
+        <div id="bloqueLogin">
+
+          <img id="logo" src="./multimedia/62b84ff960413b26d040845f90f07b02.png" alt="">
+
+          <p><span class="transit">Transit</span><span class="guion">-</span><span class="port">Port</span></p>
+          <p id="welcome">Inicia sesión para acceder a tu cuenta</p>
+          <p id="welcome2">¡Bienvenido!</p>
+
+          <hr>
+
+          <form action="post">
+
+            <input type="email" name="" id="">
+            <input type="password" name="" id="">
+
+            <input type="submit" value="INICIAR SESIÓN">
+
+          </form>
+
+        </div>
+
     </body>
 </html>
