--- a/TransitPort/src/app/log-in/log-in.component.html
+++ b/TransitPort/src/app/log-in/log-in.component.html
@@ -7,24 +7,33 @@
     </head>
     <body>
 
-        <div id="bloqueLogin">
+        <div id="bloqueInicio">
 
-          <img id="logo" src="./multimedia/62b84ff960413b26d040845f90f07b02.png" alt="">
+          <div id="bloqueLogin">
 
-          <p><span class="transit">Transit</span><span class="guion">-</span><span class="port">Port</span></p>
-          <p id="welcome">Inicia sesión para acceder a tu cuenta</p>
-          <p id="welcome2">¡Bienvenido!</p>
+            <img id="logo" src="./multimedia/62b84ff960413b26d040845f90f07b02.png" alt="">
 
-          <hr>
+            <p><span class="transit">Transit</span><span class="guion">-</span><span class="port">Port</span></p>
+            <p id="welcome">Inicia sesión para acceder a tu cuenta</p>
+            <p id="welcome2">¡Bienvenido!</p>
 
-          <form action="post">
+            <hr>
 
-            <input type="email" name="" id="">
-            <input type="password" name="" id="">
+            <form action="post">
 
-            <input type="submit" value="INICIAR SESIÓN">
+              <input type="email" name="" id="">
+              <input type="password" name="" id="">
 
-          </form>
+              <label for="recordar">Recordar usuario</label>
+              <input id="recordar" type="checkbox" name="" id="">
+
+              <input type="submit" value="INICIAR SESIÓN">
+
+            </form>
+
+          </div>
+
+
 
         </div>
 
