--- a/TransitPort/src/app/log-in/log-in.component.css
+++ b/TransitPort/src/app/log-in/log-in.component.css
@@ -45,12 +45,19 @@ p > span.port {
   flex-shrink: 0;
 }
 
+#bloqueInicio {
+  width: 1260px;
+  height: 810px;
+  flex-shrink: 0;
+
+  background: var(--Cinder-900, #152d65);
+  box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
 #bloqueLogin {
   width: 676px;
   height: 810px;
   flex-shrink: 0;
-  padding: 14px 132px 14px 25px;
-
-  background: var(--Cinder-900, #152d65);
   box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  padding: 22px 36px 22px 38px;
 }
