cambios nuevos, usuarios arreglado?

--- a/TransitPort/src/app/gestor/gestor.component.html
+++ b/TransitPort/src/app/gestor/gestor.component.html
@@ -4,7 +4,7 @@
             <td><a routerLink="crear-gruas">Crear Gruas</a></td>
             <td><a routerLink="crear-patio">Crear Patio</a></td>
             <td><a routerLink="gestionar-gruas">Gestionar Grúas</a></td>
-            <td><a routerLink="buscar-contenedor">Usuarios</a></td>
+            <td><a routerLink="usuarios">Usuarios</a></td>
         </tr>
     </table>
 </div>
