--- a/TransitPort/src/app/app.component.html
+++ b/TransitPort/src/app/app.component.html
@@ -2,6 +2,8 @@
   <a routerLink="administrativo">Administrativo</a>
   <br>
   <a routerLink="gestor">Gestor</a>
+  <br>
+  <a routerLink="operador">Operador</a>
 </div>
 
 <div>
