--- a/TransitPort/src/app/administrativo/administrativo.component.html
+++ b/TransitPort/src/app/administrativo/administrativo.component.html
@@ -10,4 +10,11 @@
         </tr>
     </table>
 </div>
+<div class="menu">
+    <div class="seleccionado">
+
+    </div>
+</div>
+<button class="aceptar">Crear</button>
+<button class="cancelar">Cancelar</button>
 <router-outlet />
