--- a/TransitPort/src/app/administrativo/buscar-contenedor/buscar-contenedor.component.html
+++ b/TransitPort/src/app/administrativo/buscar-contenedor/buscar-contenedor.component.html
@@ -1,1 +1,8 @@
-<p>buscar-contenedor works!</p>
+<div class="input">
+    <h2><span>1</span> Categoría</h2>
+    <p>Tipo de acción</p>
+    <select id="">
+        <option value="Carga">Carga</option>
+        <option value="Descarga">Descarga</option>
+    </select>
+</div>
