--- a/TransitPort/src/app/log-in/log-in.component.html
+++ b/TransitPort/src/app/log-in/log-in.component.html
@@ -11,7 +11,7 @@
 
           <div id="bloqueLogin">
 
-            <img id="logo" src="./multimedia/62b84ff960413b26d040845f90f07b02.png" alt="">
+            <img id="logo" src="./assets/Logo.png" alt="">
 
             <p><span class="transit">Transit</span><span class="guion">-</span><span class="port">Port</span></p>
             <p id="welcome">Inicia sesión para acceder a tu cuenta</p>
@@ -33,7 +33,7 @@
 
             <div id="imagenInicio">
 
-              <img id="imagenIni" src="./multimedia/group-16.png" alt="">
+              <img id="imagenIni" src="./assets/group-16.png" alt="">
 
             </div>
 
