--- a/TransitPort/src/app/log-in/log-in.component.html
+++ b/TransitPort/src/app/log-in/log-in.component.html
@@ -14,15 +14,17 @@
 
             <form action="post">
 
-              <input type="email" name="" id="">
-              <input type="password" name="" id="">
+              <input type="email" name="" id=""><br><br>
+              <input type="password" name="" id=""><br><br>
 
               <label for="recordar">Recordar usuario</label>
               <input id="recordar" type="checkbox" name="" id="">
+              <br><br>
 
               <input type="submit" value="INICIAR SESIÓN">
 
             </form>
+          </div>
 
             <div id="imagenInicio">
 
@@ -30,8 +32,5 @@
 
             </div>
 
-          </div>
-
-
-
         </div>
+
