--- a/TransitPort/src/app/gestor/usuarios/usuarios.component.html
+++ b/TransitPort/src/app/gestor/usuarios/usuarios.component.html
@@ -1,1 +1,5 @@
-<p>usuarios works!</p>
+<div class="menu">
+  <a routerLink="administrativo">Administrativo</a>
+  <br>
+  <a routerLink="gestor">Gestor</a>
+</div>
