--- a/TransitPort/src/app/gestor/usuarios/usuarios.component.html
+++ b/TransitPort/src/app/gestor/usuarios/usuarios.component.html
@@ -1,1 +1,10 @@
-<p>usuarios works!</p>
+<table datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger">
+    <tr>
+        <th>Nombre</th>
+        <th>Apellidos</th>
+    </tr>
+    <tr>
+        <td>Alberto</td>
+        <td>Zamora Landete</td>
+    </tr>
+</table>
