--- a/TransitPort/src/app/gestor/usuarios/usuarios.component.html
+++ b/TransitPort/src/app/gestor/usuarios/usuarios.component.html
@@ -1,10 +1,14 @@
-<table datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger">
+<table class="row-border hover">
+  <thead>
     <tr>
-        <th>Nombre</th>
-        <th>Apellidos</th>
+      <th>Nombre</th>
+      <th>Apellidos</th>
     </tr>
+  </thead>
+  <tbody>
     <tr>
-        <td>Alberto</td>
-        <td>Zamora Landete</td>
+      <td>Alberto</td>
+      <td>Zamora Landete</td>
     </tr>
+  </tbody>
 </table>
