--- a/TransitPort/src/app/gestor/usuarios/usuarios.component.html
+++ b/TransitPort/src/app/gestor/usuarios/usuarios.component.html
@@ -1,14 +1,1 @@
-<table class="row-border hover">
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th>Apellidos</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Alberto</td>
-      <td>Zamora Landete</td>
-    </tr>
-  </tbody>
-</table>
+<p>usuarios works!</p>
