--- a/TransitPort/src/app/operador/operador.component.html
+++ b/TransitPort/src/app/operador/operador.component.html
@@ -9,7 +9,8 @@
             <img src="./assets/pruebaPerfilMenu.png" alt="imagenPerfil" /> Juan Rodriguez
           </a>
         </div>
-        <a class="nav-link enlace" routerLink="ordenes">
+
+        <a (click)="mostrarMenu()" class="nav-link enlace" routerLink="ordenes" id="ordenes">
           <svg xmlns="http://www.w3.org/2000/svg" width="56" height="46" viewBox="0 0 32 46" fill="none">
             <path
               d="M6.25 34.375H19.25M6.25 26.25H25.75M6.25 18.125H25.75M7.875 5.125H1.375V44.125H30.625V5.125H24.125M7.875 1.875H24.125L22.0938 8.375H9.90625L7.875 1.875Z"
@@ -22,7 +23,7 @@
         </a>
 
 
-        <a class="nav-link enlace" routerLink="notificaciones">
+        <a (click)="mostrarMenu()" class="nav-link enlace" routerLink="notificaciones" id="notificaciones">
           <svg xmlns="http://www.w3.org/2000/svg" width="56" height="46" viewBox="0 0 55 52" fill="none">
             <path
               d="M13.5532 41.1667V21.6667C13.5532 18.2189 14.9811 14.9123 17.5228 12.4744C20.0645 10.0364 23.5118 8.66675 27.1064 8.66675C30.7009 8.66675 34.1482 10.0364 36.6899 12.4744C39.2316 14.9123 40.6596 18.2189 40.6596 21.6667V41.1667M13.5532 41.1667H40.6596M13.5532 41.1667H9.03546M40.6596 41.1667H45.1773M24.8475 47.6667H29.3652"
