--- a/TransitPort/src/app/operador/operador.component.html
+++ b/TransitPort/src/app/operador/operador.component.html
@@ -38,7 +38,7 @@
               stroke-width="2"
             />
           </svg>
-          Notificacionessss
+          Notificaciones
         </a>
 
 
