--- a/TransitPort/src/app/gestor/usuarios/usuarios.component.css
+++ b/TransitPort/src/app/gestor/usuarios/usuarios.component.css
@@ -3,8 +3,9 @@ table.dataTable {
   border-collapse: collapse;
 }
 
-table.dataTable thead {
-  background-color: #f8f9fa;
+th {
+  background-color: #152d65;
+  color: white;
 }
 
 table.dataTable thead th {
