--- a/TransitPort/src/app/gestor/gestor.component.html
+++ b/TransitPort/src/app/gestor/gestor.component.html
@@ -7,5 +7,6 @@
             <td><a routerLink="usuarios">Usuarios</a></td>
         </tr>
     </table>
+    <app-menu></app-menu>
 </div>
 <router-outlet />
