--- a/TransitPort/src/app/menu/menu.component.html
+++ b/TransitPort/src/app/menu/menu.component.html
@@ -1,4 +1,6 @@
-<p>menu works!</p>
 <div class="menu">
-
+  <a class="nav-link d-flex flex-column" routerLink="usuarios"><img src="./assets/usuarios.svg" alt=""></a><br>
+  <a class="nav-link d-flex flex-column" routerLink="crear-gruas"><img src="./assets/crearGruas.svg" alt=""></a><br>
+  <a class="nav-link d-flex flex-column" routerLink="gestionar-gruas"><img src="./assets/gestionarGruas.svg" alt=""></a><br>
+  <a class="nav-link d-flex flex-column" routerLink="crear-patio"><img src="./assets/crearPatio.png" alt=""></a><br>
 </div>
