--- a/TransitPort/src/app/gestor/usuarios/usuarios.component.css
+++ b/TransitPort/src/app/gestor/usuarios/usuarios.component.css
@@ -1,26 +1,46 @@
-table.dataTable {
-  width: 100%;
-  border-collapse: collapse;
+table {
+  width: 1387px;
+  height: 792px;
+  background-color: var(--Cinder-50, #f1f5fe);
+  margin-left: 250px;
 }
 
 th {
   background-color: #152d65;
   color: white;
+  width: 1477px;
+  height: 80px;
+  color: var(--Cinder-50, #f1f5fe);
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding: 30px;
 }
 
-table.dataTable thead th {
-  border-bottom: 2px solid #dee2e6;
-  padding: 10px;
+tr {
+  width: 1477px;
+  height: 80px;
+  flex-shrink: 0;
+  background-color: #fff;
+  color: #000;
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
 }
 
-table.dataTable tbody tr {
-  border-bottom: 1px solid #dee2e6;
+td {
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  padding: 30px;
 }
 
-table.dataTable tbody td {
-  padding: 10px;
-}
-
-table.dataTable tbody tr:hover {
-  background-color: #f1f1f1;
+.seleccionarTabla {
+  margin-right: 10px;
 }
