--- a/TransitPort/src/app/gestor/usuarios/usuarios.component.html
+++ b/TransitPort/src/app/gestor/usuarios/usuarios.component.html
@@ -1,40 +1,53 @@
-<table datatable class="table table-striped table-bordered">
+<table datatable class="table ">
 
   <thead>
     <tr>
       <th>Cargo</th>
-      <th>Nombre</th>
+      <th>Nombre empleado/a</th>
       <th>Estado</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>Operadoor</td>
+
+      <td><form action="post">
+        <input class="seleccionarTabla" type="checkbox" name="" id="">
+      </form>Operador</td>
       <td>Juan Sánchez</td>
       <td>Activo</td>
     </tr>
     <tr>
-      <td>Administrativo</td>
+      <td><form action="post">
+        <input class="seleccionarTabla" type="checkbox" name="" id="">
+      </form>Administrativo</td>
       <td>María Fuster</td>
       <td>Inactivo</td>
     </tr>
     <tr>
-      <td>3</td>
+      <td><form action="post">
+        <input class="seleccionarTabla" type="checkbox" name="" id="">
+      </form>3</td>
       <td>Iamout</td>
       <td>Ofinspiration</td>
     </tr>
     <tr>
-      <td>4</td>
+      <td><form action="post">
+        <input class="seleccionarTabla" type="checkbox" name="" id="">
+      </form>4</td>
       <td>Yoda</td>
       <td>Skywalker</td>
     </tr>
     <tr>
-      <td>5</td>
+      <td><form action="post">
+        <input class="seleccionarTabla" type="checkbox" name="" id="">
+      </form>5</td>
       <td>Patrick</td>
       <td>Dupont</td>
     </tr>
     <tr>
-      <td>6</td>
+      <td><form action="post">
+        <input class="seleccionarTabla" type="checkbox" name="" id="">
+      </form>6</td>
       <td>Barack</td>
       <td>Obama</td>
     </tr>
@@ -54,16 +67,6 @@
       <td>Norris</td>
     </tr>
     <tr>
-      <td>10</td>
-      <td>Simon</td>
-      <td>Robin</td>
-    </tr>
-    <tr>
-      <td>11</td>
-      <td>Louis</td>
-      <td>Lin</td>
-    </tr>
-    <tr>
       <td>12</td>
       <td>Zelda</td>
       <td>Link</td>
@@ -72,4 +75,4 @@
 
 </table>
 
-<button class="btn btn-danger">Prueba botón</button>
+
