--- a/TransitPort/src/app/gestor/gestor.component.html
+++ b/TransitPort/src/app/gestor/gestor.component.html
@@ -1,12 +1,5 @@
-<div>
-    <table>
-        <tr>
-            <td><a routerLink="crear-gruas">Crear Gruas</a></td>
-            <td><a routerLink="crear-patio">Crear Patio</a></td>
-            <td><a routerLink="gestionar-gruas">Gestionar Grúas</a></td>
-            <td><a routerLink="usuarios">Usuarios</a></td>
-        </tr>
-    </table>
-    <app-menu></app-menu>
-</div>
+
+  <div class="d-flex">
+  <app-menu></app-menu>
 <router-outlet />
+</div>
