--- a/TransitPort/src/app/log-in/log-in.component.css
+++ b/TransitPort/src/app/log-in/log-in.component.css
@@ -13,7 +13,7 @@
 } */
 
 p > span.transit {
-  color: var(--Cinder-200, #c0d2f7);
+  color: #c0d2f7;
   font-family: Monoton;
   font-size: 32px;
   font-style: normal;
@@ -73,4 +73,14 @@ p > span.port {
 #imagenIni {
   width: 100%;
   height: 100%;
+}
+
+p {
+  width: 493px;
+  height: 38px;
+  color: var(--Cinder-50, #f1f5fe);
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
 }
