--- a/TransitPort/src/app/operador/operador.component.html
+++ b/TransitPort/src/app/operador/operador.component.html
@@ -5,7 +5,7 @@
     <div class="navbar-nav flex-column justify-content-between">
       <div class="superior">
         <div class="perfil">
-          <a class="nav-link d-flex flex-column" routerLink="perfil">
+          <a (click)="mostrarMenu()"  class="nav-link d-flex flex-column" routerLink="perfil">
             <img src="./assets/pruebaPerfilMenu.png" alt="imagenPerfil" /> Juan Rodriguez
           </a>
         </div>
