--- a/TransitPort/src/app/operador/perfil/perfil.component.html
+++ b/TransitPort/src/app/operador/perfil/perfil.component.html
@@ -1,8 +1,72 @@
-<div class="vh-100 vw-99">
+<div class="vh-100 vw-99 cuerpo">
   <div class="titulo d-flex flex-row align-items-center align-content-center">
-  <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 78 78" fill="none">
-    <path fill-rule="evenodd" clip-rule="evenodd" d="M26.8125 4.87501C26.4298 4.87498 26.0524 4.96508 25.711 5.13801C25.3696 5.31094 25.0737 5.56184 24.8472 5.8704C24.6208 6.17896 24.4702 6.5365 24.4076 6.91408C24.3451 7.29165 24.3723 7.67866 24.4871 8.04376L25.0234 9.75001H17.0625C16.416 9.75001 15.796 10.0068 15.3389 10.4639C14.8818 10.9211 14.625 11.541 14.625 12.1875V70.6875C14.625 71.334 14.8818 71.954 15.3389 72.4111C15.796 72.8682 16.416 73.125 17.0625 73.125H60.9375C61.584 73.125 62.204 72.8682 62.6611 72.4111C63.1182 71.954 63.375 71.334 63.375 70.6875V12.1875C63.375 11.541 63.1182 10.9211 62.6611 10.4639C62.204 10.0068 61.584 9.75001 60.9375 9.75001H52.9815L53.5177 8.04376C53.6327 7.67826 53.6599 7.29083 53.597 6.91287C53.5342 6.53492 53.3832 6.1771 53.1562 5.86843C52.9292 5.55977 52.6327 5.30896 52.2906 5.13636C51.9486 4.96375 51.5706 4.87422 51.1875 4.87501H26.8125ZM30.1275 9.75001H47.8725L46.3466 14.625H31.6534L30.1275 9.75001ZM53.625 34.125H24.375V29.25H53.625V34.125ZM53.625 46.3125H24.375V41.4375H53.625V46.3125ZM24.375 58.5H43.875V53.625H24.375V58.5Z" fill="black"/>
-  </svg>
-  <h2>Mi perfil</h2>
-</div>
+    <svg xmlns="http://www.w3.org/2000/svg" width="56" height="55" viewBox="0 0 56 55" fill="none">
+      <path d="M11.25 15.3126C11.25 11.362 12.8194 7.57315 15.6129 4.77964C18.4064 1.98613 22.1952 0.416748 26.1459 0.416748C30.0965 0.416748 33.8853 1.98613 36.6788 4.77964C39.4723 7.57315 41.0417 11.362 41.0417 15.3126C41.0417 19.2632 39.4723 23.052 36.6788 25.8455C33.8853 28.639 30.0965 30.2084 26.1459 30.2084C22.1952 30.2084 18.4064 28.639 15.6129 25.8455C12.8194 23.052 11.25 19.2632 11.25 15.3126ZM26.8229 54.5834H0.416687V49.1668C0.416687 44.857 2.12874 40.7237 5.1762 37.6763C8.22367 34.6288 12.3569 32.9168 16.6667 32.9167H26.8229V54.5834ZM32.2396 32.9167H55.2604V38.3334H32.2396V32.9167ZM32.2396 41.0418H55.2604V46.4584H32.2396V41.0418ZM32.2396 49.1668H55.2604V54.5834H32.2396V49.1668Z" fill="black"/>
+    </svg>
+    <h2>Mi perfil</h2>
+  </div>
+
+  <div class="body-perfil d-flex flex-column align-items-center justify-content-center">
+
+    <img src="./assets/pruebaPerfilMenu.png" alt="foto-perfil">
+
+    <div class="info-perfil d-flex flex-row">
+
+      <div class="input-perfil d-flex flex-column">
+
+        <label>Nombre</label>
+        <input type="text">
+
+      </div>
+
+      <div class="input-perfil d-flex flex-column">
+
+        <label>Apellidos</label>
+        <input type="text">
+
+      </div>
+
+      <div class="input-perfil d-flex flex-column">
+
+        <label>Usuario</label>
+        <input type="text">
+
+      </div>
+
+      <div class="input-perfil d-flex flex-column">
+
+        <label>Teléfono</label>
+        <input type="text">
+
+      </div>
+
+      <div class="input-perfil d-flex flex-column">
+
+        <label>Ciudad</label>
+        <input type="text">
+
+      </div>
+
+      <div class="input-perfil d-flex flex-column">
+
+        <label>Código postal</label>
+        <input type="text">
+
+      </div>
+
+      <div class="input-perfil email d-flex flex-column">
+
+        <label>Email</label>
+        <input type="text">
+
+      </div>
+
+    </div>
+
+    <div class="boton-container d-flex">
+      <button class="boton-perfil">Cerrar sesión</button>
+    </div>
+
+  </div>
+
 </div>
