--- a/TransitPort/src/app/administrativo/administrativo.component.html
+++ b/TransitPort/src/app/administrativo/administrativo.component.html
@@ -10,9 +10,5 @@
         </tr>
     </table>
 </div>
-<div class="menu">
-    <div class="seleccionado">
-
-    </div>
-</div>
+<app-menu></app-menu>
 <router-outlet />
