--- a/TransitPort/src/app/menu/menu.component.html
+++ b/TransitPort/src/app/menu/menu.component.html
@@ -1,4 +1,13 @@
-<div class="menu">
+<div class="menu gestor">
+  <img class="perfil" src="./assets/gestor.png" alt="">
+  <a class="nav-link d-flex flex-column" routerLink="usuarios"><img class="primeraImg imgMenu" src="./assets/usuarios.svg" alt=""></a><br>
+  <a class="nav-link d-flex flex-column" routerLink="crear-gruas"><img class="imgMenu" src="./assets/crearGruas.svg" alt=""></a><br>
+  <a class="nav-link d-flex flex-column" routerLink="crear-patio"><img class="imgMenu" src="./assets/crearPatio.png" alt=""></a><br>
+  <a class="nav-link d-flex flex-column" routerLink="gestionar-gruas"><img class="imgMenu" src="./assets/gestionarGruas.svg" alt=""></a><br>
+  <img class="home imgMenu" src="./assets/home.svg" alt="">
+</div>
+
+<div class="menu administrativo">
   <img class="perfil" src="./assets/gestor.png" alt="">
   <a class="nav-link d-flex flex-column" routerLink="usuarios"><img class="primeraImg imgMenu" src="./assets/usuarios.svg" alt=""></a><br>
   <a class="nav-link d-flex flex-column" routerLink="crear-gruas"><img class="imgMenu" src="./assets/crearGruas.svg" alt=""></a><br>
