--- a/TransitPort/src/app/gestor/usuarios/usuarios.component.html
+++ b/TransitPort/src/app/gestor/usuarios/usuarios.component.html
@@ -1,78 +1,82 @@
-<table datatable class="table ">
+<img class="imgPag" src="./assets/usuariosVer.svg" alt=""><p class="tituloSecc">Usuarios</p>
 
-  <thead>
-    <tr>
-      <th>Cargo</th>
-      <th>Nombre empleado/a</th>
-      <th>Estado</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
+<div class="contenedor-tabla">
 
-      <td><form action="post">
-        <input class="seleccionarTabla" type="checkbox" name="" id="">
-      </form>Operador</td>
-      <td>Juan Sánchez</td>
-      <td>Activo</td>
-    </tr>
-    <tr>
-      <td><form action="post">
-        <input class="seleccionarTabla" type="checkbox" name="" id="">
-      </form>Administrativo</td>
-      <td>María Fuster</td>
-      <td>Inactivo</td>
-    </tr>
-    <tr>
-      <td><form action="post">
-        <input class="seleccionarTabla" type="checkbox" name="" id="">
-      </form>3</td>
-      <td>Iamout</td>
-      <td>Ofinspiration</td>
-    </tr>
-    <tr>
-      <td><form action="post">
-        <input class="seleccionarTabla" type="checkbox" name="" id="">
-      </form>4</td>
-      <td>Yoda</td>
-      <td>Skywalker</td>
-    </tr>
-    <tr>
-      <td><form action="post">
-        <input class="seleccionarTabla" type="checkbox" name="" id="">
-      </form>5</td>
-      <td>Patrick</td>
-      <td>Dupont</td>
-    </tr>
-    <tr>
-      <td><form action="post">
-        <input class="seleccionarTabla" type="checkbox" name="" id="">
-      </form>6</td>
-      <td>Barack</td>
-      <td>Obama</td>
-    </tr>
-    <tr>
-      <td>7</td>
-      <td>François</td>
-      <td>Holland</td>
-    </tr>
-    <tr>
-      <td>8</td>
-      <td>Michel</td>
-      <td>Popo</td>
-    </tr>
-    <tr>
-      <td>9</td>
-      <td>Chuck</td>
-      <td>Norris</td>
-    </tr>
-    <tr>
-      <td>12</td>
-      <td>Zelda</td>
-      <td>Link</td>
-    </tr>
-  </tbody>
+  <table datatable class="table ">
 
-</table>
+    <thead>
+      <tr>
+        <th>Cargo</th>
+        <th>Nombre empleado/a</th>
+        <th>Estado</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
 
+        <td><form action="post">
+          <input class="seleccionarTabla" type="checkbox" name="" id="">
+        </form>Operador</td>
+        <td>Juan Sánchez</td>
+        <td>Activo</td>
+      </tr>
+      <tr>
+        <td><form action="post">
+          <input class="seleccionarTabla" type="checkbox" name="" id="">
+        </form>Administrativo</td>
+        <td>María Fuster</td>
+        <td>Inactivo</td>
+      </tr>
+      <tr>
+        <td><form action="post">
+          <input class="seleccionarTabla" type="checkbox" name="" id="">
+        </form>3</td>
+        <td>Alberto</td>
+        <td>Francés</td>
+      </tr>
+      <tr>
+        <td><form action="post">
+          <input class="seleccionarTabla" type="checkbox" name="" id="">
+        </form>4</td>
+        <td>Yoda</td>
+        <td>Skywalker</td>
+      </tr>
+      <tr>
+        <td><form action="post">
+          <input class="seleccionarTabla" type="checkbox" name="" id="">
+        </form>5</td>
+        <td>Marinette</td>
+        <td>Dupont</td>
+      </tr>
+      <tr>
+        <td><form action="post">
+          <input class="seleccionarTabla" type="checkbox" name="" id="">
+        </form>6</td>
+        <td>Barack</td>
+        <td>Obama</td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>François</td>
+        <td>Holland</td>
+      </tr>
+      <tr>
+        <td>8</td>
+        <td>Michel</td>
+        <td>Popo</td>
+      </tr>
+      <tr>
+        <td>9</td>
+        <td>Chuck</td>
+        <td>Norris</td>
+      </tr>
+      <tr>
+        <td>12</td>
+        <td>Zelda</td>
+        <td>Link</td>
+      </tr>
+    </tbody>
 
+  </table>
+
+</div>
