--- a/TransitPort/src/app/menu/menu.component.css
+++ b/TransitPort/src/app/menu/menu.component.css
@@ -1,9 +1,10 @@
 div.menu {
   background: var(--Cinder-800, #133379);
   width: 110px;
-  height: 1085px;
+  height: 100%;
   flex-shrink: 0;
 }
+
 div.seleccionado {
   border-radius: 0px 20px 20px 0px;
   background: var(--Cinder-50, #f1f5fe);
@@ -42,7 +43,7 @@ div.seleccionado {
   height: 50px;
   flex-shrink: 0;
   position: relative;
-  margin-top: 300px;
+  margin-top: 250%;
 }
 
 .perfil {
