--- a/TransitPort/src/app/gestor/usuarios/usuarios.component.html
+++ b/TransitPort/src/app/gestor/usuarios/usuarios.component.html
@@ -1,5 +1,22 @@
 <img class="imgPag" src="./assets/usuariosVer.svg" alt=""><p class="tituloSecc">Usuarios</p>
 
+
+<div class="contenedor-busqueda">
+
+  <input class="input-busqueda" type="text" placeholder="Búsqueda...">
+
+</div>
+
+<div class="contenedor-botones">
+
+  <input type="checkbox" name="" id="seleccionar">
+  <p>0 Seleccionados</p>
+  <button class="boton">Crear</button>
+  <button class="boton">Eliminar</button>
+</div>
+
+
+
 <div class="contenedor-tabla">
 
   <table datatable class="table ">
