--- a/TransitPort/src/app/gestor/usuarios/usuarios.component.css
+++ b/TransitPort/src/app/gestor/usuarios/usuarios.component.css
@@ -6,10 +6,12 @@
 .imgPag {
   width: 49.074px;
   height: 53.535px;
-  margin-left: 20px;
+  margin-left: 85px;
   position: relative;
   display: inline-block;
   vertical-align: middle;
+  margin-top: 30px;
+  margin-bottom: 50px;
 }
 
 .tituloSecc {
@@ -24,7 +26,44 @@
   display: inline-block;
   vertical-align: middle;
   margin-left: 10px;
-  margin-top: 10px;
+  margin-top: 60px;
+  margin-bottom: 80px;
+}
+
+.contenedor-busqueda {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.input-busqueda {
+  width: 300px;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.contenedor-botones {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.contenedor-botones p {
+  margin: 0 10px;
+}
+
+.boton {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #152d65;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.boton:hover {
+  background-color: #0d1f4a;
 }
 
 table {
