--- a/TransitPort/src/app/gestor/usuarios/usuarios.component.html
+++ b/TransitPort/src/app/gestor/usuarios/usuarios.component.html
@@ -1,4 +1,4 @@
-<img class="imgPag" src="./assets/usuariosVer.svg" alt=""><p class="tituloSecc">Usuarios</p>
+<img class="imgPag" src="./assets/Gestor/usuariosVer.svg" alt=""><p class="tituloSecc">Usuarios</p>
 
 
 <div class="contenedor-busqueda">
