--- a/TransitPort/src/app/log-in/log-in.component.html
+++ b/TransitPort/src/app/log-in/log-in.component.html
@@ -13,11 +13,12 @@
       <input type="email" name="" id=""><br><br>
       <input type="password" name="" id=""><br><br>
 
-              <label for="recordar">Recordar usuario</label>
-              <input id="recordar" type="checkbox" name="" id="">
-              <br><br>
+      <input class="form-check-input recordarCheck" id="recordar" type="checkbox" name="" id="">
+      <label class="recordarUser" for="recordar">Recordar usuario</label>
 
-      <input type="submit" value="INICIAR SESIÓN">
+      <br><br>
+
+      <input class="btn btn-info botonLogin" type="submit" value="INICIAR SESIÓN">
     </form>
   </div>
 
