--- a/TransitPort/src/app/administrativo/crear-orden/crear-orden.component.html
+++ b/TransitPort/src/app/administrativo/crear-orden/crear-orden.component.html
@@ -1,4 +1,13 @@
-<p>crear-orden works!</p>
+<h2 class="titulo"><img src="./assets/Administrativo/crearOrdenVer.svg">Crear orden</h2>
 
+<div class="input">
+    <h2 class="numero">1</h2>
+    <h2>Categoría</h2>
+    <p>Tipo de acción</p>
+    <select name="categoria" id="">
+        <option value="Carga">Carga</option>
+        <option value="Descarga">Descarga</option>
+    </select>
+</div>
 <button class="aceptar">Crear</button>
 <button class="cancelar">Cancelar</button>
