--- a/TransitPort/src/app/gestor/usuarios/usuarios.component.html
+++ b/TransitPort/src/app/gestor/usuarios/usuarios.component.html
@@ -32,14 +32,16 @@
       <tr>
 
         <td><form action="post">
-          <input class="seleccionarTabla" type="checkbox" name="" id="">
+
+          <input class="seleccionarTabla" type="checkbox" name=""  title="Select">
         </form>Operador</td>
         <td>Juan Sánchez</td>
         <td>Activo</td>
       </tr>
       <tr>
         <td><form action="post">
-          <input class="seleccionarTabla" type="checkbox" name="" id="">
+
+          <input class="seleccionarTabla" type="checkbox" name="" >
         </form>Administrativo</td>
         <td>María Fuster</td>
         <td>Inactivo</td>
