--- a/TransitPort/src/app/operador/ordenes/tabla-ordenes/tabla-ordenes.component.css
+++ b/TransitPort/src/app/operador/ordenes/tabla-ordenes/tabla-ordenes.component.css
@@ -2,13 +2,12 @@
   padding: 10px;
 }
 
+
 .table-container {
   max-height: 550px; /* Ajusta esta altura según tus necesidades */
-  overflow-y: auto; /* Habilita el desplazamiento vertical */
-  margin: 0;
+  margin-left: 30px;
+  margin-right: 30px;
   padding: 0;
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
 }
 
 table {
@@ -37,6 +36,11 @@ thead {
 tbody {
   padding: 10px;
   margin: 0;
+  overflow-y: auto;
+  max-height: 500px;
+
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
 }
 
 .orden {
@@ -45,6 +49,7 @@ tbody {
   margin-bottom: 10px;
   padding-left: 40px;
   padding-right: 35px;
+  cursor: pointer;
 }
 
 .orden > td > div{
