--- a/TransitPort/src/app/operador/ordenes/orden/orden.component.css
+++ b/TransitPort/src/app/operador/ordenes/orden/orden.component.css
@@ -9,8 +9,6 @@
   background-color: #FFF;
   padding: 40px;
 
-
-
 }
 
 .titulo
@@ -41,6 +39,7 @@
 .cuerpo{
 
   padding: 0;
+  height: 100%;
 
 }
 
@@ -53,28 +52,117 @@
   height: 80%;
   padding: 0;
 }
-
-.superior{
-
+.superior {
+  position: relative; /* Define un contexto para el bloque absolute */
   background: var(--Cinder-900, #152D65);
   color: var(--Cinder-50, #F1F5FE);
   font-size: 48px;
-  font-style: normal;
-  font-weight: 600;
   line-height: 80px;
   margin: 0;
+  padding: 0;
+  text-align: center;
+  padding-left: 75px;
+  padding-right: 75px;
+  overflow: hidden; /* Asegura que nada salga del contenedor */
+}
+
+.superior > .detalles-orden {
+
+  text-align: center;
+  width: 35%;
+
+}
+
+.linea{
+
+  width: 100%;
+  height: 10px;
+  background-color: #4A82E6;
+  padding: 0;
+  text-align: center;
+
 }
 
 .estados{
 
-  height: 100%;
+  flex-grow: 1;
+  padding: 34px;
 
 }
 
+.bloque-incidencia {
+  position: absolute; /* No afecta al flujo del diseño */
+  bottom: 7px; /* Ajusta el espacio del borde inferior */
+  right: 7px; /* Ajusta el espacio del borde derecho */
+  z-index: 10; /* Por si se superpone con otros elementos */
+  background: #F3C715;
+  width: 60px;
+  height: 60px;
+  border-radius: 10px;
+
+}
+
+.bloque-incidencia > svg{
+
+  padding: 0;
+
+}
+
+
 button{
 
-  width: 33%;
-  height: 80%;
+  width: 32%;
+  height: 55%;
+  background: var(--Cinder-300, #89ADF0);
+  box-shadow: 4px 12px 13px 0px rgba(0, 0, 0, 0.25);
+  border: none;
+  color: #000;
+  font-size: 30px;
+  font-weight: 600;
+  transition: background-color 0.5s ease;
+}
+
+.por-hacer{
+
+  border-radius: 40px 0px 0px 40px;
+
+}
+
+.por-hacer:focus{
+
+  background: #FF6F6F;
+
+}
+
+.en-proceso:focus{
+
+  background: var(--Amarillo-3, #FACD84);
+
+}
+
+.finalizado{
+
+  border-radius: 0px 40px 40px 0px;
+
+}
+
+.inferior{
+
+  padding: 0;
+  margin-top: 15px;
+  color: var(--Cinder-900, #152D65);
+  font-style: normal;
+
+  font-size: 18px;
+  font-weight: 600;
+  line-height: normal;
+
+}
+
+.inferior > svg{
+
+  padding: 0;
+
 }
 
 
