--- a/TransitPort/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.html
+++ b/TransitPort/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.html
@@ -1,1 +1,16 @@
-<p>monitorizar-orden works!</p>
+<img src="./assets/Administrativo/monitorizarOrdenVer.svg"><p class="tituloSecc">Monitorizar Orden</p>
+
+<div class="contenedor-tabla">
+    <table datatable [dtOptions]="dtOptions" class="table table-hover">
+        <thead>
+          <tr>
+            <th>Fecha creación</th>
+            <th>Orden</th>
+            <th>Estado</th>
+          </tr>
+        </thead>
+        <tbody>    
+    
+        </tbody>
+    </table>
+</div>
