--- a/TransitPort/src/app/operador/ordenes/incidencia/incidencia.component.css
+++ b/TransitPort/src/app/operador/ordenes/incidencia/incidencia.component.css
@@ -59,89 +59,95 @@
   font-size: 48px;
   line-height: 80px;
   margin: 0;
-  padding: 0;
+  padding: 20px;
   text-align: center;
   padding-left: 75px;
   padding-right: 75px;
   overflow: hidden; /* Asegura que nada salga del contenedor */
 }
 
-.superior > .detalles-orden {
+.detalles-orden{
 
-  text-align: center;
-  width: 35%;
+  background: #F3C715;
+  width: 30%;
+  height: 73px;
 
-}
-
-.linea{
-
-  width: 100%;
-  height: 10px;
-  background-color: #4A82E6;
-  padding: 0;
-  text-align: center;
 
 }
 
-.estados{
+.detalles-orden > svg{
+
+  padding: 5px;
+
+
+}
+
+.cuerpo-incidencia{
 
   flex-grow: 1;
-  padding: 34px;
+  padding-top: 40px;
 
 }
 
-.bloque-incidencia {
-  position: absolute; /* No afecta al flujo del diseño */
-  bottom: 7px; /* Ajusta el espacio del borde inferior */
-  right: 7px; /* Ajusta el espacio del borde derecho */
-  z-index: 10; /* Por si se superpone con otros elementos */
-  background: #F3C715;
-  width: 60px;
-  height: 60px;
-  border-radius: 10px;
+.cuerpo-incidencia > input{
+
+  border-radius: 4px;
+  background: var(--Cinder-200, #C0D2F7);
+  border: none;
+  width: 65%;
+  height: 100%;
+  margin-top: 40px;
+  margin-bottom: 40px;
+
 
 }
 
-.bloque-incidencia > svg{
+.cuerpo-incidencia > button{
+
+  border-radius: 40px;
+  background: var(--Cinder-900, #152D65);
+  color: var(--Cinder-50, #F1F5FE);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  padding-left: 30px;
+  padding-right: 30px;
+  border: none;
+  margin-bottom: 10px;
+
+
+}
+
+.select-incidencia > select{
+
+  border-radius: 4px;
+  background: var(--Cinder-200, #C0D2F7);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  border: none;
+
+}
+
+.select-incidencia > label{
+
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+
+
+}
+
+.select-incidencia{
 
   padding: 0;
 
 }
 
-button{
+.select-incidencia > label{
 
-  width: 32%;
-  height: 55%;
-  background: var(--Cinder-300, #89ADF0);
-  box-shadow: 4px 12px 13px 0px rgba(0, 0, 0, 0.25);
-  border: none;
-  color: #000;
-  font-size: 30px;
-  font-weight: 600;
-  transition: background-color 0.5s ease;
-}
-
-.por-hacer{
-
-  border-radius: 40px 0px 0px 40px;
-
-}
-
-.por-hacer:focus{
-
-  background: #FF6F6F;
-
-}
-
-.en-proceso:focus{
-
-  background: var(--Amarillo-3, #FACD84);
-
-}
-
-.finalizado{
-
-  border-radius: 0px 40px 40px 0px;
+  padding: 0;
+  padding-bottom: 10px;
 
 }
 
@@ -163,5 +169,8 @@ button{
   padding: 0;
 
 }
+
+
+
 
 
