--- a/TransitPort/src/app/administrativo/crear-orden/crear-orden.component.html
+++ b/TransitPort/src/app/administrativo/crear-orden/crear-orden.component.html
@@ -5,8 +5,8 @@
     <h2>Categoría</h2>
     <p>Tipo de acción</p>
     <select name="categoria" id="">
-        <option value="Carga">Carga</option>
-        <option value="Descarga">Descarga</option>
+        <option name="categoria" value="Carga">Carga</option>
+        <option name="categoria" value="Descarga">Descarga</option>
     </select>
 </div>
 <button class="aceptar">Crear</button>
