--- a/TransitPort/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.html
+++ b/TransitPort/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.html
@@ -1,5 +1,9 @@
 <img src="./assets/Administrativo/monitorizarOrdenVer.svg"><p class="tituloSecc">Monitorizar Orden</p>
 
+<br>
+<img src="./assets/Administrativo/crearOrdenVer.svg" onclick="location.href = 'administrativo/crear-orden'">Crear Orden
+<img src="./assets/Administrativo/realizarAuditoriaVer.svg" onclick="location.href = 'administrativo/realizar-auditoria'">Realizar Auditoria
+
 <div class="contenedor-tabla">
     <table datatable [dtOptions]="dtOptions" class="table table-hover">
         <thead>
