--- a/TransitPort/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.html
+++ b/TransitPort/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.html
@@ -1,6 +1,6 @@
 <img src="./assets/Administrativo/monitorizarOrdenVer.svg"><p class="tituloSecc">Monitorizar Orden</p>
 
-<br>
+<br> <!-- onclick para que te lleve a la ruta absoluta. Con routerLink te mandaria a "administrativo/monitorizar-orden/crear-orden" -->
 <img src="./assets/Administrativo/crearOrdenVer.svg" onclick="location.href = 'administrativo/crear-orden'">Crear Orden
 <img src="./assets/Administrativo/realizarAuditoriaVer.svg" onclick="location.href = 'administrativo/realizar-auditoria'">Realizar Auditoria
 
