--- a/TransitPort/src/app/gestor/usuarios/usuarios.component.html
+++ b/TransitPort/src/app/gestor/usuarios/usuarios.component.html
@@ -1,5 +1,7 @@
 <img class="imgPag" src="./assets/Gestor/usuariosVer.svg" alt=""><p class="tituloSecc">Usuarios</p>
 
+<img src="./assets/Gestor/usuariosCrear.svg" onclick="location.href = 'gestor/crear-usuario'">Crear
+
 <div class="contenedor-tabla">
 
   <table datatable [dtOptions]="dtOptions" class="table table-hover">
