--- a/TransitPort/src/app/operador/ordenes/tabla-ordenes/tabla-ordenes.component.html
+++ b/TransitPort/src/app/operador/ordenes/tabla-ordenes/tabla-ordenes.component.html
@@ -62,3 +62,25 @@
     </table>
   </div>
 </div>
+
+<div class="contenedor-tabla">
+
+  <table datatable [dtOptions]="dtOptions" class="table table-hover">
+
+    <thead>
+      <tr>
+        <th>Cargo</th>
+        <th>Nombre empleado/a</th>
+        <th>Estado</th>
+      </tr>
+    </thead>
+    <tbody>
+
+
+
+    </tbody>
+
+
+  </table>
+
+</div>
