--- a/TransitPort/src/app/operador/operador.component.html
+++ b/TransitPort/src/app/operador/operador.component.html
@@ -6,7 +6,7 @@
       <div class="superior">
         <div class="perfil">
           <a (click)="mostrarMenu()"  class="nav-link d-flex flex-column" routerLink="perfil">
-            <img src="./assets/pruebaPerfilMenu.png" alt="imagenPerfil" /> Juan Rodriguez
+            <img src="./assets/Operador/operador.jpg" alt="imagenPerfil" /> Juan Rodriguez
           </a>
         </div>
 
