--- a/TransitPort/src/app/operador/ordenes/tabla-ordenes/tabla-ordenes.component.html
+++ b/TransitPort/src/app/operador/ordenes/tabla-ordenes/tabla-ordenes.component.html
@@ -69,9 +69,9 @@
 
     <thead>
       <tr>
-        <th>Cargo</th>
-        <th>Nombre empleado/a</th>
-        <th>Estado</th>
+        <th>Información</th>
+        <th>Buque</th>
+        <th>Tipo de órden</th>
       </tr>
     </thead>
     <tbody>
