--- a/TransitPort/src/app/operador/perfil/perfil.component.html
+++ b/TransitPort/src/app/operador/perfil/perfil.component.html
@@ -8,7 +8,7 @@
 
   <div class="body-perfil d-flex flex-column align-items-center justify-content-center">
 
-    <img src="./assets/pruebaPerfilMenu.png" alt="foto-perfil">
+    <img src="./assets/Operador/operador.jpg" alt="foto-perfil">
 
     <div class="info-perfil d-flex flex-row">
 
