--- a/src/app/log-in/log-in.component.css
+++ b/src/app/log-in/log-in.component.css
@@ -26,7 +26,7 @@
   width: 24px;
   height: 25px;
   margin-right: 10px;
-  background: var(--Cinder-900, #152d65);
+  background: var(--Cinder-900, #607dc0);
   border-width: 2px;
   border-color: #ccc;
   border-style: solid;
