--- a/src/app/administrativo/buscar-contenedor/buscar-contenedor.component.html
+++ b/src/app/administrativo/buscar-contenedor/buscar-contenedor.component.html
@@ -1,8 +1,15 @@
-<div class="input">
-    <h2><span>1</span> Categoría</h2>
-    <p>Tipo de acción</p>
-    <select id="">
-        <option value="Carga">Carga</option>
-        <option value="Descarga">Descarga</option>
-    </select>
+<div class="contenedor-tabla">
+    <table datatable [dtOptions]="dtOptions" class="table table-hover text-center">
+        <thead>
+          <tr>
+            <th>Código contenedor</th>
+            <th>Ubicación actual</th>
+            <th>Destino</th>
+            <th>Estado</th>
+          </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
 </div>
