--- a/src/app/administrativo/crear-orden/crear-orden.component.html
+++ b/src/app/administrativo/crear-orden/crear-orden.component.html
@@ -1,7 +1,16 @@
 <h2 class="titulo"><img src="./assets/Administrativo/crearOrdenVer.svg">Crear orden</h2>
 
-<div class="input">
+<div class="input campo1">
     <h2 class="numero">1</h2>
+    <h2>Categoría</h2>
+    <p>Tipo de acción</p>
+    <select name="categoria" id="">
+        <option name="categoria" value="Carga">Carga</option>
+        <option name="categoria" value="Descarga">Descarga</option>
+    </select>
+</div>
+<div class="input campo2">
+    <h2 class="numero">2</h2>
     <h2>Categoría</h2>
     <p>Tipo de acción</p>
     <select name="categoria" id="">
