--- a/src/app/operador/operador.component.html
+++ b/src/app/operador/operador.component.html
@@ -5,8 +5,8 @@
     <div class="navbar-nav flex-column justify-content-between">
       <div class="superior">
         <div class="perfil">
-          <a class="nav-link d-flex flex-column" routerLink="perfil">
-            <img src="./assets/pruebaPerfilMenu.png" alt="imagenPerfil" /> Juan Rodriguez
+          <a (click)="mostrarMenu()"  class="nav-link d-flex flex-column" routerLink="perfil">
+            <img src="./assets/Operador/operador.jpg" alt="imagenPerfil" /> Juan Rodriguez
           </a>
         </div>
 
@@ -40,7 +40,6 @@
           </svg>
           Notificaciones
         </a>
-
 
       </div>
 
