--- a/src/app/operador/notificaciones/notificaciones.component.html
+++ b/src/app/operador/notificaciones/notificaciones.component.html
@@ -1,4 +1,4 @@
-<div class="vh-100 vw-99">
+<div class="vh-100">
 
   <div class="titulo d-flex flex-row align-items-center align-content-center">
     <svg xmlns="http://www.w3.org/2000/svg" width="50" height="62" viewBox="0 0 50 62" fill="none">
@@ -7,6 +7,19 @@
       <path d="M25 7C26.6569 7 28 5.65685 28 4C28 2.34315 26.6569 1 25 1C23.3431 1 22 2.34315 22 4C22 5.65685 23.3431 7 25 7Z" fill="#040813" stroke="#040813" stroke-width="2"/>
       </svg>
     <h2>Notificaciones</h2>
+  </div>
+
+  <div class="listadoNotificaciones">
+
+      <ul>
+
+        <li class="notificacion notificacion-orden">X te ha asignado una nueva orden</li>
+        <li class="notificacion notificacion-orden">X te ha asignado una nueva orden</li>
+        <li class="notificacion notificacion-orden">X te ha asignado una nueva orden</li>
+        <li class="notificacion notificacion-incidencia">Se ha resuelto la incidencia que creaste</li>
+
+      </ul>
+
   </div>
 
 </div>
